syntax = "proto3";

option go_package = "github.com/l2cup/kids2/internal/proto/node";
import "google/protobuf/empty.proto";
import "network/network.proto";
import "vc/vc.proto";

package node;

message Configuration {
	network.Info network_info = 1;
	uint64 total_node_count = 2;
	repeated network.Info connected_nodes = 3;
}

message Transaction {
	uint64 bitcakes = 1;
}

message SnapshotRequest {
	string token = 1;
}

message StateKVPairs {
	uint64 key = 1;
	repeated Message values = 2;
}

message State {
	uint64 bitcakes = 1;
	repeated StateKVPairs sent = 2;
	repeated StateKVPairs received = 3;
	string token = 4;
}

message Message {
	uint64 id = 1;
	uint64 from = 2;
	uint64 to = 3;
	vc.VectorClock vclock = 4;
	oneof type {
		Transaction transaction = 5;
		State snapshot_state = 6;
		SnapshotRequest snapshot_request = 7;
	}
}

service Node {
	rpc Transaction(Message) returns (google.protobuf.Empty);
	rpc SendSnapshot(Message) returns (google.protobuf.Empty);
	rpc RequestSnapshot(Message) returns (google.protobuf.Empty);
}

service Bootstrap {
	rpc Register(google.protobuf.Empty) returns (Configuration);
}
